# 080493

./: README.md
Code_Vulnerability/: README.md  agents.proto  mcp_server.py  pyproject.toml  vulnerability.py  vulnerability_report.md
Code_Vulnerability/agents/: criteria_agent_server.py  quick_agent_server.py  remediation_agent_server.py  secrets_agent_server.py  static_agent_server.py  summary_agent_server.py
Customer_Loss/: README.md  churn.proto  churn_mcp.py  customer.txt  pyproject.toml  requirements.txt  start_agents.ps1  stop_agents.ps1  utils.py  vector_search.py
Customer_Loss/agents/: __init__.py  explainer.py  feature_engineer.py  grpc_utils.py  hybrid_aggregator.py  llm_recommender.py  predictor.py  recommender_collaborative.py  recommender_content.py  recommender_core.py  similar_customers.py
Generate_Proposal/: README.md  agents.proto  customer_profiles.txt  orchestrator.py  pyproject.toml  run.py  run_agents.ps1
Generate_Proposal/agents/: __init__.py  competitor_agent.py  customer_agent.py  feature_agent.py  formatter_agent.py  markdown_writer.py  revenue_agent.py
Generate_RFP/: README.md  grpc_client.py  grpc_server.py  main.py  pyproject.toml  requirements.txt  rfp.proto
Search_FactCheck_ContentsFilter/: README.md  agents.proto  mcp_server.py  pyproject.toml
Search_Multi_Model/: README.md  a2a.proto  config.py  json_utils.py  mcp_server.py  metrics.py  orchestrator.py  pyproject.toml  requirements.txt  run_all_agents.ps1
VOC_Improve/: README.md  grpc_server.py  main.py  pyproject.toml  voc.csv  voc.proto
VOC_Improve/agents/: critic.py  (+5 more)
(+23 files in other folders)
